--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -11,6 +12,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "apexcharts": "^3.35.0",
+    "axios": "^1.1.3",
     "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
