--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.5.1",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
