--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dashboard",
   "version": "0.1.0",
-  "proxy": "http://localhost:3000",
+  "proxy": "https://docwebsite.adityasurve1.repl.co/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
