--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
